--- a/HiChongSwift/FindCircleHeader.xib
+++ b/HiChongSwift/FindCircleHeader.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C94b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C99d" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
@@ -22,20 +22,20 @@
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hze-jU-Tdu">
-                    <rect key="frame" x="268" y="268" width="65" height="65"/>
+                    <rect key="frame" x="495" y="557" width="65" height="65"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="65" id="b5C-8a-5bd"/>
                         <constraint firstAttribute="width" constant="65" id="xdA-GA-sCx"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="姓名" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yu4-8Q-i4T">
-                    <rect key="frame" x="286" y="341" width="28" height="18"/>
+                    <rect key="frame" x="459" y="604" width="28" height="18"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <nil key="highlightedColor"/>
                     <color key="shadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="轻触设置相册封面" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qMC-SP-1JW">
-                    <rect key="frame" x="252" y="232" width="96" height="16"/>
+                    <rect key="frame" x="252" y="292" width="96" height="16"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
@@ -44,16 +44,16 @@
             </subviews>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstAttribute="trailing" secondItem="hze-jU-Tdu" secondAttribute="trailing" constant="40" id="7Sk-Sv-v6w"/>
                 <constraint firstAttribute="trailing" secondItem="62U-0x-RxQ" secondAttribute="trailing" id="Av0-zA-sEf"/>
+                <constraint firstItem="hze-jU-Tdu" firstAttribute="leading" secondItem="Yu4-8Q-i4T" secondAttribute="trailing" constant="8" id="SEk-ec-Lh9"/>
+                <constraint firstAttribute="centerY" secondItem="qMC-SP-1JW" secondAttribute="centerY" id="UJx-J3-abO"/>
+                <constraint firstItem="Yu4-8Q-i4T" firstAttribute="bottom" secondItem="hze-jU-Tdu" secondAttribute="bottom" id="WPS-rT-vDj"/>
                 <constraint firstItem="62U-0x-RxQ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="WvF-UO-9Qv"/>
-                <constraint firstItem="Yu4-8Q-i4T" firstAttribute="top" secondItem="hze-jU-Tdu" secondAttribute="bottom" constant="8" id="XuX-bl-mOc"/>
                 <constraint firstItem="62U-0x-RxQ" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="aJk-Xh-41Q"/>
-                <constraint firstItem="hze-jU-Tdu" firstAttribute="top" secondItem="qMC-SP-1JW" secondAttribute="bottom" constant="20" id="bfP-gR-s6n"/>
-                <constraint firstAttribute="centerY" secondItem="hze-jU-Tdu" secondAttribute="centerY" id="bxi-8Y-Sww"/>
-                <constraint firstAttribute="centerX" secondItem="qMC-SP-1JW" secondAttribute="centerX" id="ef9-10-85e"/>
-                <constraint firstAttribute="centerX" secondItem="hze-jU-Tdu" secondAttribute="centerX" id="g3a-fq-daK"/>
+                <constraint firstAttribute="bottom" secondItem="hze-jU-Tdu" secondAttribute="bottom" constant="-22" id="gWh-6p-DJg"/>
                 <constraint firstAttribute="bottom" secondItem="62U-0x-RxQ" secondAttribute="bottom" id="gjH-pQ-80V"/>
-                <constraint firstAttribute="centerX" secondItem="Yu4-8Q-i4T" secondAttribute="centerX" id="rQc-93-lh6"/>
+                <constraint firstAttribute="centerX" secondItem="qMC-SP-1JW" secondAttribute="centerX" id="umC-T6-32P"/>
             </constraints>
             <connections>
                 <action selector="headerBackgroundTouched:" destination="-1" eventType="touchUpInside" id="dT8-Ua-GBi"/>
