--- a/HiChongSwift/Wiki.storyboard
+++ b/HiChongSwift/Wiki.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C94b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="cLI-Pt-i50">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C99d" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="cLI-Pt-i50">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
@@ -353,7 +353,7 @@
         <!--Wikies View Controller-->
         <scene sceneID="L3H-yv-fb8">
             <objects>
-                <tableViewController hidesBottomBarWhenPushed="YES" id="PTc-gT-hbW" customClass="WikiesViewController" customModule="HiChongSwift" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="catedWiki" hidesBottomBarWhenPushed="YES" id="PTc-gT-hbW" customClass="WikiesViewController" customModule="HiChongSwift" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="ifn-2T-gmo">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -771,6 +771,6 @@
         <image name="WikiMid4" width="60" height="65"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="8we-zy-hdo"/>
+        <segue reference="Upd-iR-jbF"/>
     </inferredMetricsTieBreakers>
 </document>
